# linkerd2-proxy-api

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Gopkg.toml  LICENSE  MAINTAINERS.md  Makefile  README.md  build.rs  default.nix  deny.toml  go.mod  go.sum  justfile  shell.nix  tools.go
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/install-protoc/: action.yml
.github/workflows/: actions.yml  ci.yml  go.yml  markdown.yml  release.yml  rust.yml
examples/: gen.rs
go/autoregistration/: autoregistration.pb.go  autoregistration_grpc.pb.go
go/client_policy/: client_policy.pb.go  client_policy_grpc.pb.go
go/destination/: destination.pb.go  destination_grpc.pb.go
go/grpc_route/: grpc_route.pb.go
go/http_route/: http_route.pb.go
go/http_types/: http_types.pb.go
go/identity/: identity.pb.go  identity_grpc.pb.go
go/inbound/: inbound.pb.go  inbound_grpc.pb.go
go/meta/: meta.pb.go
go/net/: net.pb.go
go/opaque_route/: opaque_route.pb.go
go/outbound/: outbound.pb.go  outbound_grpc.pb.go
go/profile/: profile.pb.go
go/tap/: tap.pb.go  tap_grpc.pb.go
go/tls_route/: tls_route.pb.go
proto/: autoregistration.proto  client_policy.proto  destination.proto  grpc_route.proto  http_route.proto  http_types.proto  identity.proto  inbound.proto  meta.proto  net.proto  opaque_route.proto  outbound.proto  profile.proto  tap.proto  tls_route.proto
rs/: Cargo.toml  build.rs
rs-tonic/: Cargo.toml  build.rs
rs-tonic/src/: lib.rs
rs/src/: arbitrary.rs  lib.rs
src/: http_types.rs  lib.rs  net.rs  tap.rs
tests/: bootstrap.rs
