[package]
name = "linkerd2-proxy-api"
version = "0.3.1"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2021"
description = "Linkerd2 Proxy API gRPC bindings and utilities"
homepage = "https://linkerd.io"
repository = "https://github.com/linkerd/linkerd2-proxy-api"
documentation = "https://docs.rs/linkerd2-proxy-api"
keywords = ["linkerd", "grpc", "servicemesh"]
rust-version = "1.56"

[features]
default = []

# Generate code that is compatible with Tonic's `transport` module.
transport = ["tonic-build/transport", "tonic/transport"]

# Generate code that is formatted.
rustfmt = ["tonic-build/rustfmt"]

# Enable generation of arbitrary protos with quickcheck.
arbitrary = ["quickcheck"]

# Determines whether clients or servers are built
client = ["transport"]
server = ["transport"]

destination = ["http_types", "net", "prost-types"]
http_types = ["http", "thiserror"]
identity = ["prost-types"]
inbound = ["net", "prost-types"]
net = ["ipnet", "thiserror"]
tap = ["h2", "http_types", "net", "prost-types"]

[dependencies]
h2 = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
ipnet = { version = "2", optional = true }
prost = "0.9"
prost-types = { version = "0.9", optional = true }
quickcheck = { version = "1", default-features = false, optional = true }
thiserror = { version = "1", optional = true }
tonic = { version = "0.6", default-features = false, features = ["prost", "codegen"] }

[build-dependencies]
tonic-build = { version = "0.6", default-features = false, features = ["prost"] }
