[package]
name = "linkerd2-proxy-api-tonic"
version = "0.1.12"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tonic = { version = "0.1.1", features = ["tls", "tokio", "prost"] }
prost = "0.6"
prost-types = "0.6"
h2 = "0.2"
http = "0.2"

[build-dependencies]
tonic-build = { version = "0.1.1" }