[package]
name = "linkerd2-proxy-api"
version = "0.1.17"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[features]
# Generate code that is compatible with Tonic's `transport` module.
transport = ["tonic-build/transport", "tonic/transport"]
# Generate code that is formatted.
rustfmt = ["tonic-build/rustfmt"]
# Enable generation of arbitrary protos with quickcheck.
arbitrary = ["quickcheck", "rand"]

[dependencies]
tonic = { version = "0.4", default-features = false, features = ["prost", "codegen"] }
prost = "0.7"
prost-types = "0.7"
h2 = "0.3"
http = "0.2"

# For `arbitrary`:
quickcheck = { version = "1", default-features = false, optional = true }
rand = { version = "0.8", optional = true }

[build-dependencies]
tonic-build = { version = "0.4", default-features = false, features = ["prost"] }
