[package]
name = "linkerd2-proxy-api"
version = "0.1.18"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[features]
default = []
# Generate code that is compatible with Tonic's `transport` module.
transport = ["tonic-build/transport", "tonic/transport"]
# Generate code that is formatted.
rustfmt = ["tonic-build/rustfmt"]
# Enable generation of arbitrary protos with quickcheck.
arbitrary = ["quickcheck"]

# Determiines whether clients or servers are built
client = []
server = []

http_types = ["h2", "http"]
identity = ["prost-types"]
destination = ["http_types", "net", "prost-types"]
net = []
tap = ["http_types", "net", "prost-types"]

[dependencies]
h2 = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
prost = "0.7"
prost-types = { version = "0.7", optional = true }
quickcheck = { version = "1", default-features = false, optional = true }
tonic = { version = "0.4", default-features = false, features = ["prost", "codegen"] }

[build-dependencies]
tonic-build = { version = "0.4", default-features = false, features = ["prost"] }
